@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-26T16:14:59Z",
+  "timestamp" : "2024-05-01T16:14:25Z",
   "count_outdated" : 413,
   "uniques_outdated" : 105,
-  "count" : 415,
-  "uniques" : 107,
+  "count" : 418,
+  "uniques" : 108,
   "views" : [
     {
       "timestamp": "2024-04-23T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-01T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
