@@ -1,6 +1,6 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 5,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2024-04-23T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2024-04-26T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-01T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
